# kover-2.9.5

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acinclude.m4  aclocal.m4  cddb-id.1.in  config.h.in  configure  configure.in  configure.in.in  kover.1.in  kover.spec  kover.spec.in  subdirs
admin/: acinclude.m4.in  am_edit
admin/CVS/: Entries  Repository  Root
kover/: Makefile.am  Makefile.in  PreferencesDialog.cc  PreferencesDialog.h  categories.cc  categories.h  cddb-id.cc  cddb.cc  cddb.h  cddb_211_item.cc  cddb_211_item.h  cddb_fill.cc  cddb_fill.h  cdrom.cc  cdrom.h  cdrom_cddb.cc  cdrom_cddb.h  cdview.cc  cdview.h  config.cc  config.h  directory.cc  directory.h  direntry.cc  direntry.h  filemode.cc  filemode.h  image_dlg.kdevdlg  imagedlg.cc  imagedlg.h  inexact_dialog.cc  inexact_dialog.h  kover.desktop  kover.h  kover_global.h  koverfile.cc  koverfile.h  kovertop.cc  kovertop.h  koverui.rc  (+15 more)
kover/kostore/: Makefile.am  Makefile.in
kover/pics/: Makefile.am  Makefile.in
po/: Makefile.am  Makefile.in  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  it.gmo  it.po  kover.pot  nb.gmo  nb.po  no.gmo  no.po  pl.gmo  pl.po
