dnl =======================================================
dnl FILE: ./admin/configure.in.min
dnl =======================================================

dnl    This file is part of the KDE libraries/packages
dnl    Copyright (C) 2001 Stephan Kulow (coolo@kde.org)
 
dnl    This file is free software; you can redistribute it and/or
dnl    modify it under the terms of the GNU Library General Public
dnl    License as published by the Free Software Foundation; either
dnl    version 2 of the License, or (at your option) any later version.
 
dnl    This library is distributed in the hope that it will be useful,
dnl    but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl    Library General Public License for more details.
 
dnl    You should have received a copy of the GNU Library General Public License
dnl    along with this library; see the file COPYING.LIB.  If not, write to
dnl    the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
dnl    Boston, MA 02111-1307, USA.

# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

dnl This ksh/zsh feature conflicts with `cd blah ; pwd`
unset CDPATH

dnl Checking host/target/build systems, for make, install etc.
AC_CANONICAL_SYSTEM 
dnl Perform program name transformation
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(kover, 2.9.5) dnl searches for some needed programs

KDE_SET_PREFIX

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)
KDE_PROG_LIBTOOL

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS

KDE_USE_QT(3.1)
AC_PATH_KDE
dnl =======================================================
dnl FILE: configure.in.in
dnl =======================================================

#MIN_CONFIG(3.1)
# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

AC_ISC_POSIX

dnl Automake doc recommends to do this only here. (Janos)
dnl PACKAGE set before

KDE_SET_PREFIX

dnl Checks for programs.
AC_CHECK_COMPILERS
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)
KDE_PROG_LIBTOOL

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files

ALL_LINGUAS="de fr nb pl it es" 

AM_KDE_WITH_NLS

dnl AM_GNU_GETTEXT

AC_PATH_KDE

dnl KDE_CHECK_THREADING

dnl Image readers/writers
KDE_CHECK_KIMGIO
 

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h stdlib.h paths.h linux/cdrom.h linux/ucdrom.h)
AC_CHECK_FUNCS(usleep)
dnl KDE_FIND_PATH(iptables, IPTABLES, $PATH, AC_MSG_ERROR([No iptables found.]))



KDE_CREATE_SUBDIRSLIST

AC_ARG_ENABLE(debug,    [  --enable-debug          enable debug output. [default=no] ])

if test "$enable_debug" = yes; then
        AC_DEFINE(ENABLE_DEBUG_OUTPUT,[],[enable debug output])
        echo checking if debug output is enabled... yes
else
	echo checking if debug output is enabled... no
fi

dnl
dnl extra cddb path for debian systems
dnl

AC_ARG_WITH(cddb-path,[  --with-cddb-path=path   Location of local CDDB files],
            cddb_path="$withval", cddb_path="undef")
dnl AC_SUBST(cddb_path)
if test "$cddb_path" != undef; then
       AC_DEFINE(CDDB_PATH,"$cddb_path",[Location of local CDDB files])
       echo Using $cddb_path as cddb directory.
fi


echo checking for good CDs in your shelf... yes

AC_OUTPUT( kover.1 cddb-id.1 kover.spec )
KDE_CREATE_SUBDIRSLIST
AC_CONFIG_FILES([ Makefile ])
AC_CONFIG_FILES([ kover/Makefile ])
AC_CONFIG_FILES([ kover/docs/en/Makefile ])
AC_CONFIG_FILES([ kover/kostore/Makefile ])
AC_CONFIG_FILES([ kover/pics/Makefile ])
AC_CONFIG_FILES([ po/Makefile ])
AC_OUTPUT
# Check if KDE_SET_PREFIX was called, and --prefix was passed to configure
if test -n "$kde_libs_prefix" -a -n "$given_prefix"; then
  # And if so, warn when they don't match
  if test "$kde_libs_prefix" != "$given_prefix"; then
    # And if kde doesn't know about the prefix yet
    echo ":"`kde-config --path exe`":" | grep ":$given_prefix/bin/:" 2>&1 >/dev/null
    if test $? -ne 0; then
      echo ""
      echo "Warning: you chose to install this package in $given_prefix,"
      echo "but KDE was found in $kde_libs_prefix."
      echo "For this to work, you will need to tell KDE about the new prefix, by ensuring"
      echo "that KDEDIRS contains it, e.g. export KDEDIRS=$given_prefix:$kde_libs_prefix"
      echo "Then restart KDE."
      echo ""
    fi
  fi
fi

if test "$all_tests" = "bad"; then
  if test ! "$cache_file" = "/dev/null"; then
    echo ""
    echo "Please remove the file $cache_file after changing your setup"
    echo "so that configure will find the changes next time."
    echo ""
  fi
else
  echo ""
  echo "Good - your configure finished. Start make now"
  echo ""
fi
