
noinst_LTLIBRARIES = libkostore.la
INCLUDES = $(all_includes)

####### Files

#libkostore_la_LIBADD = $(LIB_KSYCOCA)
#libkostore_la_SOURCES = koStore.cc koTarStore.cc koDirectoryStore.cc koZipStore.cc kozip.cpp kofilterdev.cpp

libkostore_la_SOURCES = koDirectoryStore.cc \
koDirectoryStore.h \
kofilterdev.cpp \
kofilterdev.h \
kolimitediodevice.h \
koStore.cc \
koStoreDevice.h \
koStore.h \
koTarStore.cc \
koTarStore.h \
kozip.cpp \
kozip.h \
koZipStore.cc \
koZipStore.h 

